--- a/html/thema/11.html
+++ b/html/thema/11.html
@@ -35,11 +35,11 @@
 		<article class="mainVisual" id="moveTo04">
 			<div class="innerSection">
 				<div class="titWrap">
-					<h2><img src="./images/20241118/main_tit.png" alt="채용시장 hot issue"></h2>
+					<h2><img src="./images/20241118/main_tit02.png" alt="채용시장 hot issue"></h2>
 				</div>
 				<div class="txtWrap">
 					<div class="tBox">
-						<img src="./images/20241118/main_txt.png" alt="아는 것이 힘!">
+						<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241118/main_txt.png" alt="아는 것이 힘!">
 						<p>일자리 시장 주요 이슈에 대해 살펴보고<br>
 							취업준비 해볼까요? <br>
 							잡아바가 깔끔하게 정리했습니다!</p>
@@ -112,7 +112,7 @@
 								<span>단위:천명</span>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true">
-								<img src="./images/20241118/chart01.png" alt="경기도 청년 니트규모">
+								<img src="./images/20241118/chart01_01.png" alt="경기도 청년 니트규모">
 							</div>
 						</div>
 						<div class="chartItem">
@@ -120,7 +120,7 @@
 								<p class="gBold">"쉬었음"청년 비중</p>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true" data-aos-delay="1000">
-								<img src="./images/20241118/chart02.png" alt="쉬었음 청년 비중">
+								<img src="./images/20241118/chart02_01.png" alt="쉬었음 청년 비중">
 							</div>
 						</div>
 					</div>
@@ -147,7 +147,7 @@
 								<span>단위:천명</span>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true">
-								<img src="./images/20241118/chart03.png" alt="취업 의사">
+								<img src="./images/20241118/chart03_01.png" alt="취업 의사">
 							</div>
 						</div>
 						<div class="chartItem">
@@ -155,7 +155,7 @@
 								<p class="gBold">구직활동을 하지 않는 이유</p>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true" data-aos-delay="1000">
-								<img src="./images/20241118/chart04.png" alt="구직활동을 하지 않는 이유">
+								<img src="./images/20241118/chart04_01.png" alt="구직활동을 하지 않는 이유">
 							</div>
 						</div>
 					</div>
@@ -167,8 +167,7 @@
 				<div class="resultTxt type02">
 					<ul>
 						<li><p>저출산으로 청년 인구가 줄면서 니트 규모는 감소 하는것처럼 보이나,<br>
-							일자리 부족 문제로 <span class="gBold">‘쉬었음’ 인구가 증가하여 청년 취업 문제는<br>
-							오히려 심화되는 것으로 파악됩니다.</span></p></li>
+							일자리 부족 문제로 <span class="gBold">‘쉬었음’ 인구가 증가하여 청년 취업 문제는 오히려 심화되는 것으로 파악됩니다.</span></p></li>
 					</ul>
 					
 				</div>
@@ -188,7 +187,7 @@
 								<span>단위:천명</span>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true">
-								<img src="./images/20241118/chart05.png" alt="퇴직 후 1년 이상 쉬고 있는 청년">
+								<img src="./images/20241118/chart05_01.png" alt="퇴직 후 1년 이상 쉬고 있는 청년">
 							</div>
 						</div>
 						<div class="chartItem">
@@ -197,7 +196,7 @@
 								<span>단위:천명</span>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true" data-aos-delay="1000">
-								<img src="./images/20241118/chart06.png" alt="일 경험 없는 청년">
+								<img src="./images/20241118/chart06_01.png" alt="일 경험 없는 청년">
 							</div>
 						</div>
 					</div>
@@ -210,8 +209,7 @@
 					<ul class="style02">
 						<li><p>근로시간, 보수 등 <span class="gBold">근로조건(환경)이 불만족스러워 일자리를 그만둔 비중이 높고</span><br>
 							조건에 맞는 일자리를 구하지 못해 구직활동을 중단하는 ‘쉬었음’상태가 장기화되고 있습니다.</p></li>
-						<li><p>일자리 미스매치로 인해 <span class="gBold">장기적인 일경험 부족</span>을 겪는 청년들은 노동시장 경쟁력을 잃고<br>
-							장기적인 실업 상태를 겪을 수 있습니다.</p></li>
+						<li><p>일자리 미스매치로 인해 <span class="gBold">장기적인 일경험 부족</span>을 겪는 청년들은 노동시장 경쟁력을 잃고 장기적인 실업 상태를 겪을 수 있습니다.</p></li>
 					</ul>
 				</div>
 				<div class="linkWrap">
@@ -220,30 +218,38 @@
 					</div>
 					<ul>
 						<li>
-							<a href="https://www.jobaba.net/jobSprt/detail.do?seq=222">
-								<p class="lkTit gBold">청년도전 지원사업</p>
-								<p class="lkTxt">청년 맞춤형프로그램 제공!</p>
+							<a href="https://www.jobaba.net/jobSprt/detail.do?seq=222" target="_blank">
+								<div>
+									<p class="lkTit gBold">청년도전 지원사업</p>
+									<p class="lkTxt">청년 맞춤형프로그램 제공!</p>
+								</div>
 							</a>
 						</li>
 						<li>
-							<a href="https://www.jobaba.net/thema/themeInfo.do?currentPageNo=1&seq=114&viewType=default&indexSel=26&login=false">
-								<p class="lkTit gBold">잡아바 채널톡 상담</p>
-								<p class="lkTxt">취업 척척박사!<br>
-									무엇이든 물어보세요!</p>
+							<a href="https://www.jobaba.net/thema/themeInfo.do?currentPageNo=1&seq=114&viewType=default&indexSel=26&login=false" target="_blank">
+								<div>
+									<p class="lkTit gBold">잡아바 채널톡 상담</p>
+									<p class="lkTxt">취업 척척박사!<br>
+										무엇이든 물어보세요!</p>
+								</div>
 							</a>
 						</li>
 						<li>
-							<a href="https://www.jobaba.net/jobSprt/detail.do?seq=261">
-								<p class="lkTit gBold">국민취업 지원제도</p>
-								<p class="lkTxt">취업지원서비스부터<br>
-									생계지원까지!</p>
+							<a href="https://www.jobaba.net/jobSprt/detail.do?seq=261" target="_blank">
+								<div>
+									<p class="lkTit gBold">국민취업 지원제도</p>
+									<p class="lkTxt">취업지원서비스부터<br>
+										생계지원까지!</p>
+								</div>
 							</a>
 						</li>
 						<li>
-							<a href="https://lms.jobaba.net/gjf/home.do?callback=empty">
-								<p class="lkTit gBold">잡아바 러닝센터</p>
-								<p class="lkTxt">취업교육 자격증 교육<br>
-									모두 무료!</p>
+							<a href="https://lms.jobaba.net/gjf/home.do?callback=empty" target="_blank">
+								<div>
+									<p class="lkTit gBold">잡아바 러닝센터</p>
+									<p class="lkTxt">취업교육 자격증 교육<br>
+										모두 무료!</p>
+								</div>
 							</a>
 						</li>
 					</ul>
@@ -264,7 +270,7 @@
 								<span>단위:천명</span>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true">
-								<img src="./images/20241118/chart07.png" alt="경기도 외국인 고용지표">
+								<img src="./images/20241118/chart07_01.png" alt="경기도 외국인 고용지표">
 							</div>
 						</div>
 						<div class="chartItem">
@@ -273,7 +279,7 @@
 								<span>단위:명</span>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true" data-aos-delay="1000">
-								<img src="./images/20241118/chart08.png" alt="외국인 고용보험 가입자 수">
+								<img src="./images/20241118/chart08_01.png" alt="외국인 고용보험 가입자 수">
 							</div>
 						</div>
 					</div>
@@ -290,7 +296,7 @@
 								<span>단위:명</span>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true">
-								<img src="./images/20241118/chart09.png" alt="경기도 산업별 미충원인원">
+								<img src="./images/20241118/chart09_01.png" alt="경기도 산업별 미충원인원">
 							</div>
 						</div>
 						<div class="chartItem">
@@ -299,17 +305,15 @@
 								<span>단위:명</span>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true" data-aos-delay="1000">
-								<img src="./images/20241118/chart10.png" alt="산업별 외국인 노동자 취업자 현황">
+								<img src="./images/20241118/chart10_01.png" alt="산업별 외국인 노동자 취업자 현황">
 							</div>
 						</div>
 					</div>				
 				</div>
 				<div class="resultTxt">
 					<ul class="style02">
-						<li><p>경기도의 미충원 일자리의 일부는 외국인 노동자가 채우고 있으나 지난 연말 기준<br>
-							<span class="gBold">2만 7천개 이상의 일자리가 여전히 채워지지 않고 있습니다.</span></p></li>
-						<li><p>외국인 노동자의 활발한 취업활동을 위해 <span class="gBold">체계적인 취업 프로그램 및 인력공급 프로세스가<br>
-							필요</span>한 상황입니다.</p></li>
+						<li><p>경기도의 미충원 일자리의 일부는 외국인 노동자가 채우고 있으나 지난 연말 기준 <span class="gBold">2만 7천개 이상의 일자리가 여전히 채워지지 않고 있습니다.</span></p></li>
+						<li><p>외국인 노동자의 활발한 취업활동을 위해 <span class="gBold">체계적인 취업 프로그램 및 인력공급 프로세스가 필요</span>한 상황입니다.</p></li>
 					</ul>
 				</div>
 				<div class="linkWrap">
@@ -318,37 +322,44 @@
 					</div>
 					<ul>
 						<li>
-							<a href="https://www.jobaba.net/jobSprt/detail.do?seq=98">
-								<p class="lkTit gBold">K-point E74<br>
-									외국인 숙련기능인력<br>
-									추천 가점</p>
-								<p class="lkTxt">경기도 외국인 추천가점 받고
-									취업경쟁력 키우자!</p>
+							<a href="https://www.jobaba.net/jobSprt/detail.do?seq=98" target="_blank">
+								<div>
+									<p class="lkTit gBold">K-point E74<br>
+										외국인 숙련기능인력<br>
+										추천 가점</p>
+									<p class="lkTxt">경기도 외국인 추천가점 받고
+										취업경쟁력 키우자!</p>
+								</div>
 							</a>
 						</li>
 						<li>
-							<a href="https://www.jobaba.net/jobSprt/detail.do?seq=764">
-								<p class="lkTit gBold">외국인 계절근로자<br>
-									프로그램</p>
-								<p class="lkTxt">맞춤형 외국인 인력 파견<br>
-									지원사업</p>
+							<a href="https://www.jobaba.net/jobSprt/detail.do?seq=764" target="_blank">
+								<div>
+									<p class="lkTit gBold">외국인 계절근로자<br>
+										프로그램</p>
+									<p class="lkTxt">맞춤형 외국인 인력 파견<br>
+										지원사업</p>
+								</div>
 							</a>
 						</li>
 						<li>
-							<a href="https://www.jobaba.net/jobSprt/detail.do?seq=765">
-								<p class="lkTit gBold">외국인근로자 등<br>
-									의료지원사업</p>
-								<p class="lkTxt">입원진료 및 당일 외래 수술 등<br>
-									외국인 근로자 의료비 지원</p>
+							<a href="https://www.jobaba.net/jobSprt/detail.do?seq=765" target="_blank">
+								<div>
+									<p class="lkTit gBold">외국인근로자 등<br>
+										의료지원사업</p>
+									<p class="lkTxt">진료, 수술 등<br>
+										외국인 근로자 의료비 지원</p>
+								</div>
 							</a>
 						</li>
 						<li>
-							<a href="https://www.jobaba.net/jobSprt/detail.do?seq=766">
-								<p class="lkTit gBold">외국인 근로자<br>
-									권익보호 및 고충상담</p>
-								<p class="lkTxt">외국인 근로자 와 고용사업주간
-									언어소통 및 일자리 관련<br>
-									전반 상담 서비스</p>
+							<a href="https://www.jobaba.net/jobSprt/detail.do?seq=766" target="_blank">
+								<div>
+									<p class="lkTit gBold">외국인 근로자<br>
+										권익보호 및 고충상담</p>
+									<p class="lkTxt">언어소통 및 일자리 관련<br>
+										상담 서비스</p>
+								</div>
 							</a>
 						</li>
 					</ul>
@@ -381,24 +392,18 @@
 							<div class="swiper-wrapper">
 								<div class="tabItem swiper-slide bg01">
 									<p class="gBold stit">근로자</p>
-									<p class="stxt">유연한 근무환경에서 저출생 해법인 일 가정 양립 가능</p>
 									<ul>
-										<li>가족 돌봄 등 부담을 줄일 수 있어 업무 집중도 향상</li>
-										<li>단축 근로시간에 일에 집중하므로 업무효율 상승</li>
-										<li>단축근무와 고용 유지로 경력단절 예방</li>
-										<li>학업 등 자기계발 기회 증진</li>
+										<li>유연근로를 통한 업무 효율 향상</li>
+										<li>경력 단절 예방 및 자기계발 기회 확대 </li>
 										<li>일·생활 균형으로 가족관계 개선</li>
 									</ul>
 								</div>
 								<div class="tabItem swiper-slide bg02">
 									<p class="gBold stit">기업</p>
-									<p class="stxt">경력단절 예방 등 숙련인력 확보와 경쟁력 향상</p>
 									<ul>
-										<li>이직 인력 감소로 장기근속 숙련인력 확보</li>
-										<li>업무몰입도가 높아지면서 생산성 향성</li>
-										<li>직원의 업무 부담과 스트레스 감소로 직무만족도 증가</li>
-										<li>업무 집중도 제고, 고객 서비스의 질 향상으로 기업경쟁력 상승</li>
-										<li>일·생활 균형 지원 기업으로 기업이미지 제고</li>
+										<li>이직 감소를 통한 장기근속 숙련인력 확보</li>
+										<li>업무 효율과 생산성 향상으로 경쟁력 증대</li>
+										<li>직원 만족도 향상 및 기업 이미지 제고</li>
 									</ul>
 								</div>
 							</div>
@@ -410,7 +415,8 @@
 					<p class="gBold">경기도형 단축 근무제 - 0.5 & 0.75잡</p>
 				</div>
 				<div class="infoWrap">
-					<div class="item bc01">
+					<img src="./images/20241118/info_img.png" alt="경기도형 단축 근무제">
+					<!-- <div class="item bc01">
 						<div class="infoTit">
 							<div class="infoBox ">
 								<p class="iTit"><span class="gBold">Ⅰ유형</span> 0.75잡</p>
@@ -506,13 +512,12 @@
 								</p>
 							</li>
 						</ul>
-					</div>
+					</div> -->
 				</div>
 				<div class="resultTxt type02">
 					<ul>
-						<li><p>노동시장에서 <span class="gBold">고령화, 인구감소의 문제</span>를 겪고 있는 우리 사회에서<br>
-							<span class="gBold">근로시간의 유연한 조정</span>을 통해 근로자 기업간 문제를 해소할 수 있도록 지자체 · 기업에서 <br>
-							많은 노력을 하고 있습니다.</span></p></li>
+						<li><p>노동시장에서 <span class="gBold">고령화, 인구감소의 문제</span>를 겪고 있는 우리 사회에서 <span class="gBold">근로시간의 유연한 조정</span>을 통해<br>
+							근로자 기업간 문제를 해소할 수 있도록 지자체 · 기업에서 많은 노력을 하고 있습니다.</p></li>
 					</ul>					
 				</div>
 				<div class="chartTit">
@@ -535,7 +540,7 @@
 								<p class="gBold">학력수준별 AI기술 노출 지수</p>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true">
-								<img src="./images/20241118/chart11.png" alt="학력수준별 AI기술 노출 지수">
+								<img src="./images/20241118/chart11_01.png" alt="학력수준별 AI기술 노출 지수">
 							</div>
 						</div>
 						<div class="chartItem">
@@ -543,7 +548,7 @@
 								<p class="gBold">임금수준별 AI기술 노출 지수</p>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true" data-aos-delay="1000">
-								<img src="./images/20241118/chart12.png" alt="임금수준별 AI기술 노출 지수">
+								<img src="./images/20241118/chart12_01.png" alt="임금수준별 AI기술 노출 지수">
 								<p>임금 Percentile</p>
 							</div>
 							
@@ -551,10 +556,10 @@
 					</div>
 					<div class="chartTxt">
 						<hr>
-						<p class="txt02">저학력·중간소득 근로자에 영향을 미친 산업용 로봇과 달리, AI는 고학력·고소득 일자리에 더 큰 위협이 되고 있음</p>
-						<p class="txt03">출처 : AI와 노동시장 변화(BOK 이슈노트, 한국은행)</p>
+						<p class="txt02">저학력·중간소득 근로자에 영향을 미친 산업용 로봇과 달리, AI는 고학력·고소득 일자리에 더 큰 위협이 되고 있음</p>						
 					</div>					
 				</div>
+				<p class="ct_txt">출처 : AI와 노동시장 변화(BOK 이슈노트, 한국은행)</p>
 				<div class="subTit">
 					<p class="gBold">AI시대, 우리는 무엇을 준비하고 대비해야 할까?</p>
 				</div>
