--- a/index.html
+++ b/index.html
@@ -453,6 +453,11 @@
 				<td>테마</td>
 				<td><a href="html/thema/11.html" class="preview" target="_blank">테마 11호 채용시장 hot issue</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz345.html" class="preview" target="_blank">뉴스레터 345호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
