--- a/html/thema/11.html
+++ b/html/thema/11.html
@@ -35,7 +35,7 @@
 		<article class="mainVisual" id="moveTo04">
 			<div class="innerSection">
 				<div class="titWrap">
-					<h2><img src="./images/20241118/main_tit02.png" alt="채용시장 hot issue"></h2>
+					<h2><img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241118/main_tit02.png" alt="채용시장 hot issue"></h2>
 				</div>
 				<div class="txtWrap">
 					<div class="tBox">
@@ -112,7 +112,7 @@
 								<span>단위:천명</span>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true">
-								<img src="./images/20241118/chart01_01.png" alt="경기도 청년 니트규모">
+								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241118/chart01_01.png" alt="경기도 청년 니트규모">
 							</div>
 						</div>
 						<div class="chartItem">
@@ -120,7 +120,7 @@
 								<p class="gBold">"쉬었음"청년 비중</p>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true" data-aos-delay="1000">
-								<img src="./images/20241118/chart02_01.png" alt="쉬었음 청년 비중">
+								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241118/chart02_01.png" alt="쉬었음 청년 비중">
 							</div>
 						</div>
 					</div>
@@ -147,7 +147,7 @@
 								<span>단위:천명</span>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true">
-								<img src="./images/20241118/chart03_01.png" alt="취업 의사">
+								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241118/chart03_01.png" alt="취업 의사">
 							</div>
 						</div>
 						<div class="chartItem">
@@ -155,7 +155,7 @@
 								<p class="gBold">구직활동을 하지 않는 이유</p>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true" data-aos-delay="1000">
-								<img src="./images/20241118/chart04_01.png" alt="구직활동을 하지 않는 이유">
+								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241118/chart04_02.png" alt="구직활동을 하지 않는 이유">
 							</div>
 						</div>
 					</div>
@@ -187,7 +187,7 @@
 								<span>단위:천명</span>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true">
-								<img src="./images/20241118/chart05_01.png" alt="퇴직 후 1년 이상 쉬고 있는 청년">
+								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241118/chart05_01.png" alt="퇴직 후 1년 이상 쉬고 있는 청년">
 							</div>
 						</div>
 						<div class="chartItem">
@@ -196,7 +196,7 @@
 								<span>단위:천명</span>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true" data-aos-delay="1000">
-								<img src="./images/20241118/chart06_01.png" alt="일 경험 없는 청년">
+								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241118/chart06_01.png" alt="일 경험 없는 청년">
 							</div>
 						</div>
 					</div>
@@ -270,7 +270,7 @@
 								<span>단위:천명</span>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true">
-								<img src="./images/20241118/chart07_01.png" alt="경기도 외국인 고용지표">
+								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241118/chart07_01.png" alt="경기도 외국인 고용지표">
 							</div>
 						</div>
 						<div class="chartItem">
@@ -279,7 +279,7 @@
 								<span>단위:명</span>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true" data-aos-delay="1000">
-								<img src="./images/20241118/chart08_01.png" alt="외국인 고용보험 가입자 수">
+								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241118/chart08_01.png" alt="외국인 고용보험 가입자 수">
 							</div>
 						</div>
 					</div>
@@ -296,7 +296,8 @@
 								<span>단위:명</span>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true">
-								<img src="./images/20241118/chart09_01.png" alt="경기도 산업별 미충원인원">
+								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241118/chart09_01.png" alt="경기도 산업별 미충원인원">
+								<p class="trt">출처: 고용노동부, 직종별사업체노동력조사(2023. 하)</p>
 							</div>
 						</div>
 						<div class="chartItem">
@@ -305,7 +306,8 @@
 								<span>단위:명</span>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true" data-aos-delay="1000">
-								<img src="./images/20241118/chart10_01.png" alt="산업별 외국인 노동자 취업자 현황">
+								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241118/chart10_01.png" alt="산업별 외국인 노동자 취업자 현황">
+								<p class="trt">출처 : 통계청, 이민자체류실태및고용조사(2023년)</p>
 							</div>
 						</div>
 					</div>				
@@ -415,7 +417,7 @@
 					<p class="gBold">경기도형 단축 근무제 - 0.5 & 0.75잡</p>
 				</div>
 				<div class="infoWrap">
-					<img src="./images/20241118/info_img.png" alt="경기도형 단축 근무제">
+					<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241118/info_img.png" alt="경기도형 단축 근무제">
 					<!-- <div class="item bc01">
 						<div class="infoTit">
 							<div class="infoBox ">
@@ -540,7 +542,7 @@
 								<p class="gBold">학력수준별 AI기술 노출 지수</p>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true">
-								<img src="./images/20241118/chart11_01.png" alt="학력수준별 AI기술 노출 지수">
+								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241118/chart11_01.png" alt="학력수준별 AI기술 노출 지수">
 							</div>
 						</div>
 						<div class="chartItem">
@@ -548,7 +550,7 @@
 								<p class="gBold">임금수준별 AI기술 노출 지수</p>
 							</div>
 							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true" data-aos-delay="1000">
-								<img src="./images/20241118/chart12_01.png" alt="임금수준별 AI기술 노출 지수">
+								<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241118/chart12_01.png" alt="임금수준별 AI기술 노출 지수">
 								<p>임금 Percentile</p>
 							</div>
 							
