--- a/index.html
+++ b/index.html
@@ -458,6 +458,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz345.html" class="preview" target="_blank">뉴스레터 345호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/corp/corp11.html" class="preview" target="_blank">기업회원 뉴스레터 11월 호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
