--- a/html/corp/corp11.html
+++ b/html/corp/corp11.html
@@ -11,46 +11,46 @@
         display: none;
       }
     </style>
-    <table border="0" cellpadding="0" cellspacing="0" width="100%"> 
+    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 800px; margin: 0 auto;" align="center"> 
       <tbody>
         <tr>
           <td>
-            <table border="0" cellpadding="0" cellspacing="0" width="800" style="margin: 0 auto 0 auto">
+            <table border="0" cellpadding="0" cellspacing="0" width="100%" style="margin: 0 auto 0 auto">
               <tr>
                 <td>
                   <!-- 헤더 -->
-                  <table align="center" border="0" cellpadding="0" cellspacing="0" width="800">
+                  <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
                     <tbody> 
                       <tr>
                         <td>
-                          <img src="https://chaebonggi.github.io/jobabamain/html/corp/images/corp11/corp_01.jpg" alt="잡아바 기업뉴스레터 11월호" style="display: block; width: 100%;">
+                          <img src="https://chaebonggi.github.io/jobabamain/html/corp/images/corp11/corp_01.jpg" alt="잡아바 기업뉴스레터 11월호" style="display: block;">
                         </td>
                       </tr>
                     </tbody>
                   </table>
                   <!-- 메인 컨텐츠 -->
-                  <table align="center" border="0" cellpadding="0" cellspacing="0" width="800" style="max-width: 800px;width: 100%">
+                  <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 800px;">
                     <tbody>
                       <tr>
                         <td>                          
-                          <img src="https://chaebonggi.github.io/jobabamain/html/corp/common/choice_title.png" alt="잡아바 choice 경기도 지원사업" style="display: block; width: 100%;">
+                          <img src="https://chaebonggi.github.io/jobabamain/html/corp/common/choice_title.png" alt="잡아바 choice 경기도 지원사업" style="display: block;">
                         </td>
                       </tr>
                       <tr>
                         <td>
                           <a href="https://www.jobaba.net/entSprt/detail.do?seq=117" target="_blank" style="text-decoration: none;">
-                            <img src="https://chaebonggi.github.io/jobabamain/html/corp/images/corp11/corp_02.jpg" alt="창업 bus 프로그램" style="display: block;width: 100%">
+                            <img src="https://chaebonggi.github.io/jobabamain/html/corp/images/corp11/corp_02.jpg" alt="창업 bus 프로그램" style="display: block;">
                           </a>
                         </td>
                       </tr>                      
                     </tbody>
                   </table>
                   <!-- 정부 유관기관 지원사업 -->
-                  <table align="center" border="0" cellpadding="0" cellspacing="0" width="800">
+                  <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
                     <tbody>
                       <tr>
                         <td>
-                          <img src="https://chaebonggi.github.io/jobabamain/html/corp/common/business_title.png" alt="정부 유관기관 지원사업" style="display: block;width: 100%">
+                          <img src="https://chaebonggi.github.io/jobabamain/html/corp/common/business_title.png" alt="정부 유관기관 지원사업" style="display: block;">
                         </td>
                       </tr>
                       <tr>
@@ -64,12 +64,12 @@
                                         <tr>
                                           <td>
                                             <a href="https://www.jobaba.net/entSprt/detail.do?seq=249" target="_blank">
-                                              <img src="https://chaebonggi.github.io/jobabamain/html/corp/images/corp11/corp_03.jpg" alt="경기도 우수 중소기업 컨설팅 참여기업 모집" style="display: block;width: 100%">
+                                              <img src="https://chaebonggi.github.io/jobabamain/html/corp/images/corp11/corp_03.jpg" alt="경기도 우수 중소기업 컨설팅 참여기업 모집" style="display: block;">
                                             </a>
                                           </td>
                                           <td>
                                             <a href="https://www.jobaba.net/entSprt/detail.do?seq=546" target="_blank">
-                                              <img src="https://chaebonggi.github.io/jobabamain/html/corp/images/corp11/corp_04.jpg" alt="창업지원주택 입주자 모집" style="display: block;width: 100%">
+                                              <img src="https://chaebonggi.github.io/jobabamain/html/corp/images/corp11/corp_04.jpg" alt="창업지원주택 입주자 모집" style="display: block;">
                                             </a>
                                           </td>
                                         </tr>
@@ -79,7 +79,7 @@
                               </tr>
                               <tr>
                                 <td>
-                                  <img src="https://chaebonggi.github.io/jobabamain/html/corp/common/business_bar01.png" alt="bg_bar" style="display: block; width: 100%;">
+                                  <img src="https://chaebonggi.github.io/jobabamain/html/corp/common/business_bar01.png" alt="bg_bar" style="display: block;">
                                 </td>
                               </tr>
                               <tr>
@@ -89,12 +89,12 @@
                                       <tr>
                                         <td>
                                           <a href="https://www.jobaba.net/entSprt/detail.do?seq=55" target="_blank">
-                                            <img src="https://chaebonggi.github.io/jobabamain/html/corp/images/corp11/corp_05.jpg" alt="경기북부권 새일여성인턴 참여기업 모집" style="display: block;width: 100%">
+                                            <img src="https://chaebonggi.github.io/jobabamain/html/corp/images/corp11/corp_05.jpg" alt="경기북부권 새일여성인턴 참여기업 모집" style="display: block;">
                                           </a>
                                         </td>
                                         <td>
                                           <a href="https://www.jobaba.net/empmEdu/detail.do?seq=54993" target="_blank">
-                                            <img src="https://chaebonggi.github.io/jobabamain/html/corp/images/corp11/corp_06.jpg" alt="재직자 대상 IoT 무료 교육생 모집" style="display: block;width: 100%">
+                                            <img src="https://chaebonggi.github.io/jobabamain/html/corp/images/corp11/corp_06.jpg" alt="재직자 대상 IoT 무료 교육생 모집" style="display: block;">
                                           </a>
                                         </td>
                                       </tr>
@@ -114,7 +114,7 @@
                     </tbody>
                   </table>                  
                   <!-- banner -->
-                  <table align="center" border="0" cellpadding="0" cellspacing="0" width="800">
+                  <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
                     <tbody>
                       <tr>
                         <td>
@@ -126,7 +126,7 @@
                     </tbody>
                   </table>
                   <!-- footer -->
-                  <table align="center" border="0" cellpadding="0" cellspacing="0" width="800">
+                  <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
                     <tbody>
                       <tr>
                         <td>
