--- a/index.html
+++ b/index.html
@@ -463,6 +463,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/corp/corp11.html" class="preview" target="_blank">기업회원 뉴스레터 11월 호</a></td>
 			</tr>
+			<tr class="event">
+				<td></td>
+				<td>이벤트</td>
+				<td><a href="html/event/event06.html" class="preview" target="_blank">ai역량검사 이벤트</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
