--- a/index.html
+++ b/index.html
@@ -468,6 +468,11 @@
 				<td>이벤트</td>
 				<td><a href="html/event/event06.html" class="preview" target="_blank">ai역량검사 이벤트</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz346.html" class="preview" target="_blank">뉴스레터 346호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
